test/langtools/tools/javac/switchextra/SwitchStatementBroken.out
SwitchStatementBroken.java:13:13: compiler.err.switch.mixing.case.types
1 error
